refactor: migrate desktop client to spring boot