@@ -1,25 +1,25 @@
 package pl.sgorski.nethelt.agent.webclient;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Objects;
 import java.util.Set;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import okhttp3.MediaType;
 import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import okhttp3.RequestBody;
-import okhttp3.Response;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import pl.sgorski.nethelt.agent.config.WebClientSingleton;
-import pl.sgorski.nethelt.agent.serialization.SerializationController;
+import org.springframework.stereotype.Service;
 import pl.sgorski.nethelt.exception.WebClientException;
 import pl.sgorski.nethelt.model.Device;
 import pl.sgorski.nethelt.model.NetworkConfig;
 import pl.sgorski.nethelt.model.Result;
 import pl.sgorski.nethelt.utils.CollectionUtils;
+import tools.jackson.databind.json.JsonMapper;
 
-/** Service for communicating with the web server. */
+@Slf4j
+@Service
+@RequiredArgsConstructor
 public class WebClientService {
 
   private static final String BASE_URL = "http://localhost:8080/api";
@@ -27,32 +27,19 @@ public class WebClientService {
   private static final String PING_ENDPOINT = BASE_URL + "/ping";
   private static final String TELNET_ENDPOINT = BASE_URL + "/telnet";
   private static final String JSON_MEDIA_TYPE = "application/json";
-  private static final Logger LOG = LoggerFactory.getLogger(WebClientService.class);
 
   private final OkHttpClient webServerClient;
-  private final SerializationController serializer;
+  private final JsonMapper jsonMapper;
 
-  public WebClientService(SerializationController serializer) {
-    this.webServerClient = WebClientSingleton.getInstance();
-    this.serializer = serializer;
-    LOG.debug("WebClientService initialized with base web server URL: {}", BASE_URL);
-  }
-
-  /**
-   * Sends results to the server.
-   *
-   * @param results the set of results to send. Must extends {@link Result}
-   * @param clazz the class type of the results
-   */
   public <T extends Result> void sendResult(Set<T> results, Class<T> clazz) {
     if (CollectionUtils.isEmpty(results)) return;
-    LOG.info(
+    log.info(
         "Attempting to send {} results of type {} to the server",
         results.size(),
         clazz.getSimpleName());
-    String json = serializer.serialize(results);
-    String endpoint = resolveEndpoint(clazz);
-    LOG.debug("Resolved endpoint: {} for class: {}", endpoint, clazz.getSimpleName());
+    var json = jsonMapper.writeValueAsString(results);
+    var endpoint = resolveEndpoint(clazz);
+    log.debug("Resolved endpoint: {} for class: {}", endpoint, clazz.getSimpleName());
     postJson(endpoint, json);
   }
 
@@ -66,17 +53,10 @@ public class WebClientService {
     };
   }
 
-  /**
-   * Sends POST to the server.
-   *
-   * @param url the endpoint URL
-   * @param json the JSON payload
-   * @throws WebClientException when connection to the server cannot be established
-   */
   private void postJson(String url, String json) {
-    LOG.debug("Posting JSON to URL: {}. Payload: {}", url, json);
-    RequestBody body = RequestBody.create(json, MediaType.get(JSON_MEDIA_TYPE));
-    Request request =
+    log.debug("Posting JSON to URL: {}. Payload: {}", url, json);
+    var body = RequestBody.create(json, MediaType.get(JSON_MEDIA_TYPE));
+    var request =
         new Request.Builder()
             .url(url)
             .addHeader("Authorization", "Bearer some-token") // TODO: implement JWT Client
@@ -85,20 +65,15 @@ public class WebClientService {
 
     try {
       webServerClient.newCall(request).execute().close();
-      LOG.debug("Successfully posted results to the server at URL: {}", url);
+      log.debug("Successfully posted results to the server at URL: {}", url);
     } catch (IOException e) {
       throw new WebClientException("Cannot connect to the server", e);
     }
   }
 
-  /**
-   * Fetches the list of {@link NetworkConfig} from the server.
-   *
-   * @return set of config fetched from the server
-   */
   public Set<NetworkConfig> fetchNetworkConfig() {
-    LOG.debug("Fetching network configuration from the server");
-    Request request =
+    log.debug("Fetching network configuration from the server");
+    var request =
         new Request.Builder()
             .url(BASE_URL + "/config/network")
             .addHeader("Authorization", "Bearer some-token") // TODO: implement JWT Client
@@ -107,14 +82,9 @@ public class WebClientService {
     return getSetOfObjects(request, NetworkConfig.class);
   }
 
-  /**
-   * Fetches the list of {@link Device} from the server.
-   *
-   * @return set of devices fetched from the server
-   */
   public Set<Device> fetchDevices() {
-    LOG.debug("Fetching devices from the server");
-    Request request =
+    log.debug("Fetching devices from the server");
+    var request =
         new Request.Builder()
             .url(DEVICES_ENDPOINT)
             .addHeader("Authorization", "Bearer some-token") // TODO: implement JWT Client
@@ -124,12 +94,13 @@ public class WebClientService {
   }
 
   private <T> Set<T> getSetOfObjects(Request request, Class<T> clazz) {
-    try (Response response = webServerClient.newCall(request).execute()) {
+    try (var response = webServerClient.newCall(request).execute()) {
       if (!response.isSuccessful() || Objects.isNull(response.body())) {
-        return Collections.emptySet();
+        return Set.of();
       }
-      String json = response.body().string();
-      return serializer.deserializeToSet(json, clazz);
+      return jsonMapper.readValue(
+          response.body().string(),
+          jsonMapper.getTypeFactory().constructCollectionType(Set.class, clazz));
     } catch (IOException e) {
       throw new WebClientException(
           "Error while fetching devices from server: " + e.getMessage(), e);
